[package]
name = "tox"
version = "0.1.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
[features]
default = []

[dependencies]
clippy = {version = "*", optional = true}
structopt = "0.1.6"
rand = "0.3.16"
structopt-derive = "*"
llvm-sys = "40.0.0"
libc = "0.2"
[dev-dependencies]
pretty_assertions = "0.4.0"