[workspace]
members=[
    "errors",
    "parser",
    "syntax",
    "semant",
    "tools",
    "vm",
    "tox-wasm",
    "tox",
]
default-members=["tox"]
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
# panic = "abort"
# debug = false
codegen-units = 8
lto = false
incremental = true
