[package]
name = "frontend"
version = "0.1.0"
authors = ["rowlandsonpratt <striderman34@gmail.com>"]


[features]
graphviz=["ir/graphviz"]


[dependencies]
util = {path = "../util"}
opcode = {path = "../opcode"}
syntax = {path= "../syntax"}
vm = {path = "../vm"}
ir = {path="../ir"}
rand = "0.3.16"
fnv = "1.0.6"


[dev-dependencies]
pretty_assertions = "0.4.0"