[package]
name = "ir"
version = "0.1.0"
authors = ["lenardprattt <striderman34@gmail.com>"]
edition = "2018"


[features]
graphviz=[]
prettytable = ["text-tables"]
[dependencies]
util= { path="../util"}
text-tables = {version = "0.3.1", optional=true}
indexmap = "*"
[dependencies.petgraph]
version= "0.4"
