[package]
name = "ir"
version = "0.1.0"
authors = ["lenardprattt <striderman34@gmail.com>"]
edition = "2018"


[features]
graphviz=[]
prettytable = ["text-tables"]
dom = ["prettytable"]
live_ranges = ["prettytable"]
live_out = ["prettytable"]
[dependencies]
util= { path="../util"}
text-tables = {version = "0.3.1", optional=true}
indexmap = "*"
intrusive-collections = "0.7.8"
cfg-if="*"
[dependencies.petgraph]
version= "0.4"

[dev-dependencies]
pretty_assertions = "0.6.1"