[package]
name = "parser"
version = "0.1.0"
authors = ["Lenard Pratt <l3np27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax={path="../syntax",version="*"}
errors = {path="../errors"}
rowan="0.9.0"
[dev-dependencies]
insta = "0.8.2"
pretty_assertions = "0.6.1"