[package]
name = "semant"
version = "0.1.0"
authors = ["Lenard Pratt <l3np27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax= {path="../syntax"}
parser= {path="../parser"}
salsa = "^0.14.1"
errors = {path="../errors"}
indexmap = "1.3.0"
serde ="*"
tracing="^0.1.22"
[dev-dependencies]
serde ="1.0.106"
ron = "0.5.1"
tempfile = "3.1.0"
walkdir = "2"