[package]
name = "syntax"
version = "0.1.0"
authors = ["Lenard Pratt <l3np27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.9.0"
itertools="*"
errors = {path="../errors"}

[dev-dependencies]
insta = "0.8.2"
tempfile = "3.1.0"