[package]
name = "tox"
version = "0.2.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
[features]
default = []
debug = ["vm/debug"]
# debug = ["vm/debug"]  # Enable debug statements within the vm

[dependencies]
util = {path = "../util"}
syntax = {path = "../syntax"}

frontend = {path = "../frontend"}
vm = {path="../vm"}
structopt = "0.3"
clippy = {version = "*", optional = true}
fnv = "*"


[[test]]
name ="test_runner"
path ="../tests/test_runner.rs"
harness = false


[dev-dependencies]
walkdir = "2"
ansi_term = "0.10"
tempfile = "3"