[package]
name = "tox"
version = "0.1.0"
authors = ["Lenard Pratt <l3np27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
salsa ="^0.14.1"
structopt = "0.3"
syntax={path="../syntax",version="*"}
errors= {path="../errors",version="*"}
parser={path="../parser",version="*"}
semant = {path="../semant"}
vm = {path="../vm"}
reporting = {version="^0.9.0",package="codespan-reporting"}
tracing = "^0.1.22"
tracing-subscriber = "0.2"
tracing-tree = "0.1.6"
[dev-dependencies]
insta = "0.16.0"
serde ="1.0.106"
ron = "0.5.1"
tempfile = "3.1.0"
walkdir = "2"
