[package]
name = "vm"
version = "0.1.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
edition="2018"

[dependencies]
util = {path = "../util"}
opcode = {path="../opcode"}
rand = "0.6.1"
fnv = "1.0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
debug = ["stack"]
NAN_tagging = []
stack = ["debug"]
default = []

