[package]
name = "vm"
version = "0.1.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "^0.14.1"
semant = {path="../semant"} 
opcode = {path="../opcode"} 
errors = {path="../errors"}
